package app.domain.model;

public enum OrganizationRole {
    Recepcionist, MedicalLabTechnician, Doctor, SpecialistDoctor
}
